[package]
name = "varcon-core-fuzz"
version = "0.0.0"
publish = false
edition = "2021"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"

[dependencies.varcon-core]
path = ".."
features = ["parser"]

# Prevent this from interfering with workspaces
[workspace]
members = ["."]

[profile.release]
debug = 1

[[bin]]
name = "cluster_parse"
path = "fuzz_targets/cluster_parse.rs"
test = false
doc = false
